// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render expensesSummary with 1 expense 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $2,334.35
  </h1>
</div>
`;
